APDS-82 fixes from testing - fix for header settings button alignment, acceptability map highlighting in light and dark schemes editing forms, search button text in light and dark text, tbba form styling ( select form buttons as well as disabled button classes) . Unable to get passed file upload. Also synced various shades of reds to be one color code.

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -112,3 +112,10 @@ a.home-link {
     background-color: #409dc7;
     color: #fff;
 }
+
+.header-settings.btn-round {
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    margin-top: 6px;
+}
